--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -367,6 +367,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([1., 1., 1., 1., 1.])\n",
+      "n: [1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = torch.ones(5)\n",
+    "print(f\"t: {t}\")\n",
+    "n = t.numpy()\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t: tensor([2., 2., 2., 2., 2.])\n",
+      "n: [2. 2. 2. 2. 2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t.add_(1)\n",
+    "print(f\"t: {t}\")\n",
+    "print(f\"n: {n}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
