--- a/profile.ipynb
+++ b/profile.ipynb
@@ -14,6 +14,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyModule(nn.Module):\n",
+    "    def __init__(self, in_features: int, out_features: int, bias: bool = True):\n",
+    "        super(MyModule, self).__init__()\n",
+    "        self.linear = nn.Linear(in_features, out_features, bias)\n",
+    "        \n",
+    "    def forward(self, input, mask):\n",
+    "        with profiler.record_function(\"linear pass\"):\n",
+    "            out = self.linear(input)\n",
+    "        \n",
+    "        with profiler.record_function(\"mask indices\"):\n",
+    "            threshold = out.sum(axis=1).mean().item()\n",
+    "            hi_idx = np.argwhere(mask.cpu().numpy() > threshold)\n",
+    "            hi_idx = torch.from_numpy(hi_idx).cuda()\n",
+    "        \n",
+    "        return out, hi_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MyModule(500, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
