--- a/torch_nn.ipynb
+++ b/torch_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,144 @@
     "print(x_train, y_train)\n",
     "print(x_train.shape)\n",
     "print(y_train.min(), y_train.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "weights = torch.randn(784, 10) / math.sqrt(784)\n",
+    "weights.requires_grad_()\n",
+    "bias = torch.zeros(10, requires_grad=True)\n",
+    "\n",
+    "# activiation function\n",
+    "# Tensor exp()\n",
+    "# Tensor sum() / log() / unqueeze ?\n",
+    "def log_softmax(x):\n",
+    "    print('a', x.shape)\n",
+    "    print('a-', (x.exp().sum(-1)).shape)\n",
+    "    print('a-', (x.exp().sum(-1).log().unsqueeze(-1)).shape)\n",
+    "\n",
+    "    return x - x.exp().sum(-1).log().unsqueeze(-1)\n",
+    "\n",
+    "def model(xb):\n",
+    "    print('--',xb.shape)\n",
+    "    print('==',weights.shape)\n",
+    "    print(\"xx\",(xb @ weights).shape)\n",
+    "    return log_softmax(xb @ weights + bias)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([50000, 784])\n",
+      "-- torch.Size([64, 784])\n",
+      "== torch.Size([784, 10])\n",
+      "xx torch.Size([64, 10])\n",
+      "a torch.Size([64, 10])\n",
+      "a- torch.Size([64])\n",
+      "a- torch.Size([64, 1])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([-2.1371, -1.9322, -2.4872, -2.9334, -1.9232, -2.6683, -2.3395, -2.2655,\n",
+       "         -2.7146, -2.1294], grad_fn=<SelectBackward0>),\n",
+       " torch.Size([64, 10]))"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bs = 64\n",
+    "\n",
+    "xb = x_train[0:bs]\n",
+    "print(x_train.shape)\n",
+    "preds = model(xb)\n",
+    "\n",
+    "preds[0], preds.shape\n",
+    "#print(preds[0], preds.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nll(input, target):\n",
+    "   \n",
+    " #   print(target)\n",
+    " #   print(input[ range(target.shape[0]) ])\n",
+    " #   print('**', input[range(target.shape[0]), target])   ## ?? 이해가 되지 않는다.\n",
+    "    return -input[range(target.shape[0]), target].mean()\n",
+    "\n",
+    "loss_func = nll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3136, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "yb = y_train[0:bs]\n",
+    "print(loss_func(preds, yb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(out, yb):\n",
+    "    preds = torch.argmax(out, dim=1)\n",
+    "    print((preds == yb).float())\n",
+    "    return (preds == yb).float().mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1.,\n",
+      "        0., 0., 0., 0., 0., 1., 1., 0., 0., 0.])\n",
+      "tensor(0.0938)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy(preds, yb))\n"
    ]
   },
   {
