--- a/torch_nn.ipynb
+++ b/torch_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,12 +159,12 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([-2.1371, -1.9322, -2.4872, -2.9334, -1.9232, -2.6683, -2.3395, -2.2655,\n",
-       "         -2.7146, -2.1294], grad_fn=<SelectBackward0>),\n",
+       "(tensor([-2.6027, -1.9136, -2.1854, -2.6299, -2.7826, -2.2480, -2.2295, -2.4701,\n",
+       "         -2.1209, -2.1689], grad_fn=<SelectBackward0>),\n",
        " torch.Size([64, 10]))"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.3136, grad_fn=<NegBackward0>)\n"
+      "tensor(2.3186, grad_fn=<NegBackward0>)\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,18 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 1., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-      "        0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1.,\n",
-      "        0., 0., 0., 0., 0., 1., 1., 0., 0., 0.])\n",
-      "tensor(0.0938)\n"
+      "tensor([0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 1., 1.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+      "tensor(0.1094)\n"
      ]
     }
    ],
@@ -249,10 +249,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 1., 0., 1., 1.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
+      "tensor(2.3186, grad_fn=<NllLossBackward0>) tensor(0.1094)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F \n",
+    "\n",
+    "loss_func = F.cross_entropy\n",
+    "\n",
+    "def model(xb):\n",
+    "    return xb @ weights + bias\n",
+    "\n",
+    "print(loss_func(model(xb), yb), accuracy(model(xb), yb)) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch import nn\n",
+    "\n",
+    "class Mnist_Logistics(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.weights = nn.Parameter(torch.randn(784, 10) / math.sqrt(784))\n",
+    "        self.bias = nn.Parameter(torch.zeros(10))\n",
+    "        \n",
+    "    def forward(self, xb):\n",
+    "        return xb @ self.weights + self.bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.4025, grad_fn=<NllLossBackward0>)\n",
+      "torch.Size([64, 10])\n",
+      "torch.Size([64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Mnist_Logistics()\n",
+    "\n",
+    "print(loss_func(model(xb), yb))\n",
+    "\n",
+    "print(model(xb).shape)\n",
+    "print(yb.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n  = list(x_train.size())[0]\n",
+    "lr = 0.5  # 학습률(learning rate)\n",
+    "epochs = 50  # 훈련에 사용할 에폭(epoch) 수\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit():\n",
+    "    for epoch in range(epochs):\n",
+    "        for i in range( (n-1) // bs + 1 ):\n",
+    "            start_i = i * bs\n",
+    "            end_i = start_i + bs\n",
+    "            \n",
+    "            xb = x_train[start_i:end_i]\n",
+    "            yb = y_train[start_i:end_i]\n",
+    "            \n",
+    "            pred = model(xb)\n",
+    "            loss = loss_func(pred, yb)\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            with torch.no_grad():\n",
+    "                for p in model.parameters():\n",
+    "                    p -= p.grad * lr\n",
+    "                    # print(p)\n",
+    "                model.zero_grad()\n",
+    "                \n",
+    "fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0414, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss_func(model(xb), yb))"
+   ]
   }
  ],
  "metadata": {
