--- a/torch_nn.ipynb
+++ b/torch_nn.ipynb
@@ -373,6 +373,90 @@
    "source": [
     "print(loss_func(model(xb), yb))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mnist_Logistics(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.lin = nn.Linear(784, 10)\n",
+    "    \n",
+    "    def forward(self, xb):\n",
+    "        return self.lin(xb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.0461, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Mnist_Logistics()\n",
+    "fit()\n",
+    "print(loss_func(model(xb), yb))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.3882, grad_fn=<NllLossBackward0>)\n",
+      "tensor(0.0461, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch import optim\n",
+    "import torch.nn.functional as F \n",
+    "\n",
+    "model = Mnist_Logistics()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "loss_func = F.cross_entropy\n",
+    "\n",
+    "print(loss_func(model(xb), yb))\n",
+    "\n",
+    "def fit():\n",
+    "    for epoch in range(epochs):\n",
+    "        for i in range((n-1) // bs +1):\n",
+    "            start_i = i * bs\n",
+    "            end_i = start_i + bs\n",
+    "            xb = x_train[start_i:end_i]\n",
+    "            yb = y_train[start_i:end_i]\n",
+    "            \n",
+    "            pred = model(xb)\n",
+    "            loss = loss_func(pred, yb)\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "fit()\n",
+    "print(loss_func(model(xb), yb))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
