--- a/ray_tune.ipynb
+++ b/ray_tune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +102,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_cifar(config, checkpoint_dir=None, data_dir=None):\n",
     "    \n",
+    "    net = Net(config[\"l1\"], config[\"l2\"])\n",
+    "    device = \"mps\"\n",
+    "    net.to(device)\n",
     "    \n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.SGD(net.parameters(), lr=config[\"lr\"], momentum=0.9)\n",
+    "    \n",
+    "    if checkpoint_dir:\n",
+    "        model_state, optimizer_state = torch.load(\n",
+    "            os.path.join(checkpoint_dir, \"checkpoint\"))\n",
+    "        net.load_state_dict(model_state)\n",
+    "        optimizer.load_state_dict(optimizer_state)\n",
+    "    \n",
+    "    trainset, testset = load_data(data_dir)\n",
+    "    \n",
+    "    test_abs = int(len(trainset) * 0.8)\n",
+    "    train_subset, val_subset = random_split(\n",
+    "        trainset, [test_abs, len(trainset) - test_abs])\n",
+    "    \n",
+    "    trainloader = torch.utils.data.DataLoader(\n",
+    "        train_subset,\n",
+    "        batch_size = int(config[\"batch_size\"]),\n",
+    "        shuffle = True,\n",
+    "        num_workers=8\n",
+    "    )\n",
+    "    \n",
+    "    valloader = torch.utils.DataLoader(\n",
+    "        val_subset,\n",
+    "        batch_size = int(config(\"batch_size\")),\n",
+    "        shuffle = True,\n",
+    "        num_workers=8\n",
+    "    )\n",
+    "    \n",
+    "    for epoch in range(10):\n",
+    "        running_loss = 0.0\n",
+    "        epoch_steps = 0\n",
+    "        for i, data in enumerate(trainloader, 0):\n",
+    "            inputs, labels = data\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            outputs = net(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            running_loss += loss.item()\n",
+    "            epoch_steps += 1\n",
+    "            if i % 2000 == 1999:\n",
+    "                print(\"[%d, %5d] loss: %.3f\" % (epoch + 1, i + 1,\n",
+    "                                                running_loss / epoch_steps))\n",
+    "                running_loss = 0.0    \n",
     "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m result \u001b[38;5;241m=\u001b[39m tune\u001b[38;5;241m.\u001b[39mrun(\n\u001b[0;32m----> 2\u001b[0m     partial(train_cifar, data_dir\u001b[38;5;241m=\u001b[39mdata_dir)\n\u001b[1;32m      3\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data_dir' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "result = tune.run(\n",
+    "    partial(train_cifar, data_dir=data_dir)\n",
+    ")"
    ]
   }
  ],
